--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
 		"prettier": "^3.7.4",
 		"prettier-eslint": "^16.4.2",
 		"prettier-eslint-cli": "^8.0.1"
+	},
+	"dependencies": {
+		"ecowitt-gateway": "^1.0.4"
 	}
 }
